# serializer version: 1
# name: test_feature_spec_version_deterministic
  '473c860ef72ef30b5c2d6aa6601a3342d816512536b03cd61808e0dd93b2db40'
# ---
# name: test_feature_spec_version_includes_all_properties
  '285db9ad24660f445c4f394e1ed4c1e90f9270ff81ecaaf715bbbe00e8ec97d7'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'metaxy_feature_spec_version': 'c19bf840ba81c8e03f3eb0516a042157623def5df12cf1c92f453d943f0ad9b7',
    'metaxy_feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'metaxy_snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'tests.test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'deps': None,
      'fields': list([
        dict({
          'code_version': '1',
          'deps': list([
          ]),
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'metadata': dict({
      }),
    }),
    'metaxy_feature_spec_version': 'ffac5337d8ef946b5ebc04f54629037e5c7fc1affa56b9de24be7861bb70aa4a',
    'metaxy_full_definition_version': 'e94e07a211ecbb8852ad5b50eeff420370af84fc24ec39c511b2ca32ac9c6bb7',
    'metaxy_feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  'ec274b4e2098124803f88d79b26b381da28140987bec4dc70369915e01e69567'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  'bc98ef44e7b4b35f290d7e9edde7e90b7a0d2042c24c6dca68c7cadf98c97073'
# ---
